--- a/empresa.html
+++ b/empresa.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <title>Empresa | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Conheça a história e estrutura da All Luminum Br.">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
   <div class="container header-container">
-    <a href="index.html" class="logo">
-      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
-    </a>
+    <div class="logo">
+      <a href="index.html">
+        <img src="assets/imagens/logo_all luminum_branco.png" alt="All Luminum Br">
+      </a>
+    </div>
     <nav>
       <a href="index.html">Início</a>
       <a href="empresa.html">Empresa</a>
@@ -24,12 +24,11 @@
   </div>
 </header>
 
-<section class="page">
-  <div class="container">
-    <h1>Sobre a All Luminum Br</h1>
-    <p>A All Luminum Br nasceu com o propósito de entregar soluções industriais em alumínio com alto padrão técnico, confiabilidade estrutural e excelência operacional.</p>
-    <p>Localizada em São Carlos – SP, atuamos com responsabilidade técnica, compromisso com prazos e foco total na qualidade dos materiais e processos.</p>
-    <p>Nossa estrutura foi desenvolvida para atender demandas industriais com precisão, segurança e consistência.</p>
+<section class="hero hero-empresa">
+  <div class="hero-content">
+    <h1>Quem Somos</h1>
+    <p>A All Luminum Br nasceu com o propósito de entregar soluções industriais em alumínio com qualidade técnica, responsabilidade e visão de longo prazo.</p>
+    <p>Atuamos com estrutura sólida, processos definidos e compromisso com prazos e padrões industriais.</p>
   </div>
 </section>
 
@@ -37,10 +36,12 @@
   All Luminum Br CNPJ: 57.084.413/0001-19 |
   📞 <a href="https://wa.me/5516997857531" target="_blank">(16) 99785-7531</a> |
   ✉️ <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil | Todos os direitos reservados.
+  São Carlos – SP – Brasil - Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">WhatsApp</a>
+<a class="whatsapp-float" href="https://wa.me/5516997857531" target="_blank">
+  WhatsApp
+</a>
 
 </body>
 </html>
