--- a/atuacao.html
+++ b/atuacao.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <title>Atuação | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Áreas de atuação da All Luminum Br.">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
   <div class="container header-container">
-    <a href="index.html" class="logo">
-      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
-    </a>
+    <div class="logo">
+      <a href="index.html">
+        <img src="assets/imagens/logo_all luminum_branco.png" alt="All Luminum Br">
+      </a>
+    </div>
     <nav>
       <a href="index.html">Início</a>
       <a href="empresa.html">Empresa</a>
@@ -24,17 +24,11 @@
   </div>
 </header>
 
-<section class="page">
-  <div class="container">
-    <h1>Áreas de Atuação</h1>
-    <p>Atendemos indústrias que exigem fornecimento técnico de alumínio com alto padrão de qualidade.</p>
-    <ul>
-      <li>Fornecimento de perfis de alumínio</li>
-      <li>Soluções para construção civil</li>
-      <li>Indústria metalúrgica</li>
-      <li>Projetos sob demanda</li>
-      <li>Distribuição para mercado industrial</li>
-    </ul>
+<section class="hero hero-atuacao">
+  <div class="hero-content">
+    <h1>Nossa Atuação</h1>
+    <p>Fornecimento de alumínio para aplicações industriais, estruturais e técnicas.</p>
+    <p>Atendemos demandas específicas com precisão dimensional e controle de qualidade rigoroso.</p>
   </div>
 </section>
 
@@ -42,10 +36,12 @@
   All Luminum Br CNPJ: 57.084.413/0001-19 |
   📞 <a href="https://wa.me/5516997857531" target="_blank">(16) 99785-7531</a> |
   ✉️ <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil | Todos os direitos reservados.
+  São Carlos – SP – Brasil - Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">WhatsApp</a>
+<a class="whatsapp-float" href="https://wa.me/5516997857531" target="_blank">
+  WhatsApp
+</a>
 
 </body>
 </html>
