--- a/processos.html
+++ b/processos.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <title>Processos | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Processos industriais da All Luminum Br.">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
   <div class="container header-container">
-    <a href="index.html" class="logo">
-      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
-    </a>
+    <div class="logo">
+      <a href="index.html">
+        <img src="assets/imagens/logo_all luminum_branco.png" alt="All Luminum Br">
+      </a>
+    </div>
     <nav>
       <a href="index.html">Início</a>
       <a href="empresa.html">Empresa</a>
@@ -24,17 +24,11 @@
   </div>
 </header>
 
-<section class="page">
-  <div class="container">
+<section class="hero hero-processos">
+  <div class="hero-content">
     <h1>Processos Industriais</h1>
-    <p>Nossos processos seguem rigor técnico e controle de qualidade em todas as etapas.</p>
-    <ul>
-      <li>Seleção criteriosa de matéria-prima</li>
-      <li>Controle dimensional</li>
-      <li>Padronização de acabamento</li>
-      <li>Logística organizada e rastreável</li>
-      <li>Compromisso com prazos e qualidade final</li>
-    </ul>
+    <p>Controle técnico desde a seleção da matéria-prima até a entrega final.</p>
+    <p>Rastreabilidade, precisão dimensional e inspeção contínua garantem padrão elevado em cada lote produzido.</p>
   </div>
 </section>
 
@@ -42,10 +36,12 @@
   All Luminum Br CNPJ: 57.084.413/0001-19 |
   📞 <a href="https://wa.me/5516997857531" target="_blank">(16) 99785-7531</a> |
   ✉️ <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil | Todos os direitos reservados.
+  São Carlos – SP – Brasil - Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">WhatsApp</a>
+<a class="whatsapp-float" href="https://wa.me/5516997857531" target="_blank">
+  WhatsApp
+</a>
 
 </body>
 </html>
