--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>All Luminum Br | Alumínio Industrial</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>All Luminum Br</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
-  <div class="container header-container">
-    <div class="logo">
-      <a href="index.html">
-        <img src="assets/imagens/logo_all luminum_branco.png" alt="All Luminum Br">
-      </a>
-    </div>
-    <nav>
-      <a href="index.html">Início</a>
-      <a href="empresa.html">Empresa</a>
-      <a href="atuacao.html">Atuação</a>
-      <a href="processos.html">Processos</a>
-    </nav>
-  </div>
+  <a href="index.html">
+    <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
+  </a>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Início</a></li>
+      <li><a href="empresa.html">Empresa</a></li>
+      <li><a href="atuacao.html">Atuação</a></li>
+      <li><a href="processos.html">Processos</a></li>
+    </ul>
+  </nav>
 </header>
+
+<main>
 
 <section class="hero hero-home">
   <div class="hero-content">
-    <h1>Alumínio com precisão e responsabilidade industrial</h1>
-    <p>Atuamos no fornecimento e processamento de alumínio com padrão técnico elevado e compromisso com resultado.</p>
+    <h1>Excelência em Alumínio Industrial</h1>
+    <p>Qualidade, precisão e compromisso com resultados duradouros.</p>
   </div>
 </section>
 
+</main>
+
 <footer>
   All Luminum Br CNPJ: 57.084.413/0001-19 |
-  📞 <a href="https://wa.me/5516997857531" target="_blank">(16) 99785-7531</a> |
-  ✉️ <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
+  <a href="tel:+5516997857531">📞 (16) 99785-7531</a> |
+  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
   São Carlos – SP – Brasil - Todos os direitos reservados.
 </footer>
 
-<a class="whatsapp-float" href="https://wa.me/5516997857531" target="_blank">
-  WhatsApp
-</a>
+<a class="whatsapp-float" href="https://wa.me/5516997857531" target="_blank">WhatsApp</a>
 
 </body>
 </html>
