--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
 
 <header>
-  <a href="index.html">
-    <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
-  </a>
+
+  <div class="logo">
+    <a href="index.html">
+      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
+    </a>
+  </div>
 
   <nav>
     <ul>
@@ -22,6 +25,7 @@
       <li><a href="processos.html">Processos</a></li>
     </ul>
   </nav>
+
 </header>
 
 <main>
@@ -42,7 +46,9 @@
   São Carlos – SP – Brasil - Todos os direitos reservados.
 </footer>
 
-<a class="whatsapp-float" href="https://wa.me/5516997857531" target="_blank">WhatsApp</a>
+<a class="whatsapp-float" href="https://wa.me/5516997857531" target="_blank">
+  WhatsApp
+</a>
 
 </body>
 </html>
