--- a/index.html
+++ b/index.html
@@ -1,39 +1,59 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>All Luminum Br</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>All Luminum Br | Soluções Industriais em Alumínio</title>
+  <meta name="description" content="All Luminum Br - Soluções industriais em alumínio com qualidade, precisão e padrão técnico.">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<header>
+<header class="site-header">
 
-  <div class="logo">
-    <a href="index.html">
-      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
-    </a>
+  <div class="header-container">
+
+    <div class="logo">
+      <a href="index.html">
+        <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
+      </a>
+    </div>
+
+    <div class="header-right">
+
+      <div class="social-links">
+        <a href="https://www.instagram.com/allluminumbr/" target="_blank">Instagram</a>
+        <a href="https://www.facebook.com/profile.php?id=61578217930037" target="_blank">Facebook</a>
+        <a href="https://www.linkedin.com/company/all-luminum-inovacao-e-comercio-de-aluminio/" target="_blank">LinkedIn</a>
+        <a href="https://www.youtube.com/@AllLuminumBr" target="_blank">YouTube</a>
+      </div>
+
+      <nav class="main-nav">
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="empresa.html">Empresa</a></li>
+          <li><a href="atuacao.html">Atuação</a></li>
+          <li><a href="processos.html">Processos</a></li>
+        </ul>
+      </nav>
+
+    </div>
+
   </div>
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Início</a></li>
-      <li><a href="empresa.html">Empresa</a></li>
-      <li><a href="atuacao.html">Atuação</a></li>
-      <li><a href="processos.html">Processos</a></li>
-    </ul>
-  </nav>
 
 </header>
 
 <main>
 
 <section class="hero hero-home">
+  <div class="hero-overlay"></div>
   <div class="hero-content">
-    <h1>Excelência em Alumínio Industrial</h1>
-    <p>Qualidade, precisão e compromisso com resultados duradouros.</p>
+    <h1>Soluções Industriais em Alumínio</h1>
+    <p>
+      Estrutura técnica, precisão industrial e compromisso com excelência.
+      Atuamos com responsabilidade e padrão profissional.
+    </p>
   </div>
 </section>
 
@@ -41,12 +61,13 @@
 
 <footer>
   All Luminum Br CNPJ: 57.084.413/0001-19 |
-  <a href="tel:+5516997857531">📞 (16) 99785-7531</a> |
-  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil - Todos os direitos reservados.
+  <a href="tel:+5516997857531">(16) 99785-7531</a> |
+  <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
+  São Carlos – SP – Brasil |
+  Todos os direitos reservados.
 </footer>
 
-<a class="whatsapp-float" href="https://wa.me/5516997857531" target="_blank">
+<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
   WhatsApp
 </a>
 
