--- a/atuacao.html
+++ b/atuacao.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Atuação | All Luminum Br</title>
-  <meta name="description" content="Áreas de atuação da All Luminum Br.">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Atuação | All Luminum Br</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,76 +18,52 @@
       </a>
     </div>
 
-    <div class="header-right">
+    <nav class="main-nav">
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="empresa.html">Empresa</a></li>
+        <li><a href="atuacao.html">Atuação</a></li>
+        <li><a href="processos.html">Processos</a></li>
+      </ul>
+    </nav>
 
-      <div class="social-links">
-        <a href="https://www.instagram.com/allluminumbr/" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61578217930037" target="_blank">Facebook</a>
-        <a href="https://www.linkedin.com/company/all-luminum-inovacao-e-comercio-de-aluminio/" target="_blank">LinkedIn</a>
-        <a href="https://www.youtube.com/@AllLuminumBr" target="_blank">YouTube</a>
-      </div>
-
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="empresa.html">Empresa</a></li>
-          <li><a href="atuacao.html">Atuação</a></li>
-          <li><a href="processos.html">Processos</a></li>
-        </ul>
-      </nav>
-
+    <div class="social-icons">
+      <a href="https://www.instagram.com/allluminumbr/" target="_blank">
+        <img src="assets/icon-instagram.png" alt="Instagram">
+      </a>
+      <a href="https://www.facebook.com/profile.php?id=61578217930037" target="_blank">
+        <img src="assets/icon-facebook.png" alt="Facebook">
+      </a>
+      <a href="https://www.linkedin.com/company/all-luminum-inovacao-e-comercio-de-aluminio/" target="_blank">
+        <img src="assets/icon-linkedin.png" alt="LinkedIn">
+      </a>
+      <a href="https://www.youtube.com/@AllLuminumBr" target="_blank">
+        <img src="assets/icon-youtube.png" alt="YouTube">
+      </a>
     </div>
+
   </div>
 </header>
 
-<main>
-
 <section class="hero hero-atuacao">
-  <div class="hero-overlay"></div>
+  <div class="overlay"></div>
   <div class="hero-content">
-    <h1>Nossa Atuação</h1>
+    <h1>Atuação Industrial</h1>
     <p>
-      Fornecimento e soluções industriais em alumínio
-      para diferentes segmentos do mercado.
+      A All Luminum atua no fornecimento e comercialização de alumínio para aplicações industriais,
+      atendendo demandas técnicas com padrão profissional, precisão e responsabilidade.
     </p>
   </div>
 </section>
-
-<section class="content-section">
-  <div class="container">
-    <h2>Comercialização de Alumínio</h2>
-    <p>
-      Distribuição de materiais com padrão técnico,
-      controle de qualidade e logística eficiente.
-    </p>
-
-    <h2>Soluções Industriais</h2>
-    <p>
-      Atendimento a demandas específicas,
-      com foco em precisão e performance.
-    </p>
-
-    <h2>Atendimento Personalizado</h2>
-    <p>
-      Relacionamento direto com o cliente,
-      entendimento da necessidade e entrega assertiva.
-    </p>
-  </div>
-</section>
-
-</main>
 
 <footer>
-  All Luminum Br CNPJ: 57.084.413/0001-19 |
-  <a href="tel:+5516997857531">(16) 99785-7531</a> |
-  <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil |
-  Todos os direitos reservados.
+All Luminum Br CNPJ: 57.084.413/0001-19 |
+<a href="https://wa.me/5516997857531" target="_blank">📞(16) 99785-7531</a> |
+<a href="mailto:vendas@allluminumbr.com">✉️vendas@allluminumbr.com</a> |
+São Carlos – SP – Brasil - Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
-  WhatsApp
-</a>
+<a href="https://wa.me/5516997857531" class="whatsapp-btn" target="_blank">WhatsApp</a>
 
 </body>
 </html>
