--- a/empresa.html
+++ b/empresa.html
@@ -1,93 +1,56 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Empresa | All Luminum Br</title>
-  <meta name="description" content="Conheça a história e estrutura da All Luminum Br.">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Empresa | All Luminum Br</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <header class="site-header">
   <div class="header-container">
-
     <div class="logo">
       <a href="index.html">
-        <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
+        <img src="assets/imagens/logo-allluminum-branco.png">
       </a>
     </div>
 
-    <div class="header-right">
+    <nav class="main-nav">
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="empresa.html">Empresa</a></li>
+        <li><a href="atuacao.html">Atuação</a></li>
+        <li><a href="processos.html">Processos</a></li>
+      </ul>
+    </nav>
 
-      <div class="social-links">
-        <a href="https://www.instagram.com/allluminumbr/" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61578217930037" target="_blank">Facebook</a>
-        <a href="https://www.linkedin.com/company/all-luminum-inovacao-e-comercio-de-aluminio/" target="_blank">LinkedIn</a>
-        <a href="https://www.youtube.com/@AllLuminumBr" target="_blank">YouTube</a>
-      </div>
-
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="empresa.html">Empresa</a></li>
-          <li><a href="atuacao.html">Atuação</a></li>
-          <li><a href="processos.html">Processos</a></li>
-        </ul>
-      </nav>
-
+    <div class="social-icons">
+      <a href="https://www.instagram.com/allluminumbr/" target="_blank"><img src="assets/icon-instagram.png"></a>
+      <a href="https://www.facebook.com/profile.php?id=61578217930037" target="_blank"><img src="assets/icon-facebook.png"></a>
+      <a href="https://www.linkedin.com/company/all-luminum-inovacao-e-comercio-de-aluminio/" target="_blank"><img src="assets/icon-linkedin.png"></a>
+      <a href="https://www.youtube.com/@AllLuminumBr" target="_blank"><img src="assets/icon-youtube.png"></a>
     </div>
   </div>
 </header>
 
-<main>
-
 <section class="hero hero-empresa">
-  <div class="hero-overlay"></div>
+  <div class="overlay"></div>
   <div class="hero-content">
-    <h1>Sobre a All Luminum Br</h1>
-    <p>
-      A All Luminum Br nasce com foco em inovação, responsabilidade industrial
-      e excelência na comercialização e transformação de alumínio.
-    </p>
+    <h1>Sobre a All Luminum</h1>
+    <p>Inovação, estrutura técnica e compromisso com o setor industrial.</p>
   </div>
 </section>
-
-<section class="content-section">
-  <div class="container">
-    <h2>Nossa Estrutura</h2>
-    <p>
-      Localizada em São Carlos – SP, atuamos com padrão técnico elevado,
-      compromisso com prazos e foco em soluções industriais sob medida.
-    </p>
-
-    <h2>Missão</h2>
-    <p>
-      Fornecer soluções em alumínio com qualidade, precisão e responsabilidade,
-      agregando valor aos projetos de nossos clientes.
-    </p>
-
-    <h2>Visão</h2>
-    <p>
-      Ser referência regional em inovação e confiabilidade no setor industrial.
-    </p>
-  </div>
-</section>
-
-</main>
 
 <footer>
-  All Luminum Br CNPJ: 57.084.413/0001-19 |
-  <a href="tel:+5516997857531">(16) 99785-7531</a> |
-  <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil |
-  Todos os direitos reservados.
+All Luminum Br CNPJ: 57.084.413/0001-19 |
+<a href="https://wa.me/5516997857531" target="_blank">📞(16) 99785-7531</a> |
+<a href="mailto:vendas@allluminumbr.com">✉️vendas@allluminumbr.com</a> |
+São Carlos – SP – Brasil - Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
-  WhatsApp
-</a>
+<a href="https://wa.me/5516997857531" class="whatsapp-btn" target="_blank">WhatsApp</a>
 
 </body>
 </html>
