--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>All Luminum Br | Soluções Industriais em Alumínio</title>
-  <meta name="description" content="All Luminum Br - Soluções industriais em alumínio com qualidade, precisão e padrão técnico.">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>All Luminum Br | Soluções Industriais em Alumínio</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <header class="site-header">
-
   <div class="header-container">
 
     <div class="logo">
@@ -20,56 +18,49 @@
       </a>
     </div>
 
-    <div class="header-right">
+    <nav class="main-nav">
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="empresa.html">Empresa</a></li>
+        <li><a href="atuacao.html">Atuação</a></li>
+        <li><a href="processos.html">Processos</a></li>
+      </ul>
+    </nav>
 
-      <div class="social-links">
-        <a href="https://www.instagram.com/allluminumbr/" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61578217930037" target="_blank">Facebook</a>
-        <a href="https://www.linkedin.com/company/all-luminum-inovacao-e-comercio-de-aluminio/" target="_blank">LinkedIn</a>
-        <a href="https://www.youtube.com/@AllLuminumBr" target="_blank">YouTube</a>
-      </div>
-
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="empresa.html">Empresa</a></li>
-          <li><a href="atuacao.html">Atuação</a></li>
-          <li><a href="processos.html">Processos</a></li>
-        </ul>
-      </nav>
-
+    <div class="social-icons">
+      <a href="https://www.instagram.com/allluminumbr/" target="_blank">
+        <img src="assets/icon-instagram.png">
+      </a>
+      <a href="https://www.facebook.com/profile.php?id=61578217930037" target="_blank">
+        <img src="assets/icon-facebook.png">
+      </a>
+      <a href="https://www.linkedin.com/company/all-luminum-inovacao-e-comercio-de-aluminio/" target="_blank">
+        <img src="assets/icon-linkedin.png">
+      </a>
+      <a href="https://www.youtube.com/@AllLuminumBr" target="_blank">
+        <img src="assets/icon-youtube.png">
+      </a>
     </div>
 
   </div>
-
 </header>
 
-<main>
-
 <section class="hero hero-home">
-  <div class="hero-overlay"></div>
+  <div class="overlay"></div>
   <div class="hero-content">
     <h1>Soluções Industriais em Alumínio</h1>
-    <p>
-      Estrutura técnica, precisão industrial e compromisso com excelência.
-      Atuamos com responsabilidade e padrão profissional.
-    </p>
+    <p>Estrutura técnica, precisão industrial e compromisso com excelência.</p>
   </div>
 </section>
 
-</main>
-
 <footer>
-  All Luminum Br CNPJ: 57.084.413/0001-19 |
-  <a href="tel:+5516997857531">(16) 99785-7531</a> |
-  <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil |
-  Todos os direitos reservados.
+All Luminum Br CNPJ: 57.084.413/0001-19 |
+<a href="https://wa.me/5516997857531" target="_blank">📞(16) 99785-7531</a> |
+<a href="mailto:vendas@allluminumbr.com">✉️vendas@allluminumbr.com</a> |
+São Carlos – SP – Brasil - Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
-  WhatsApp
-</a>
+<a href="https://wa.me/5516997857531" class="whatsapp-btn" target="_blank">WhatsApp</a>
 
 </body>
 </html>
