--- a/atuacao.html
+++ b/atuacao.html
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
